Comment production database

--- a/config/database.yml
+++ b/config/database.yml
@@ -34,8 +34,8 @@ test:
   server: 127.0.0.1
   port: 3306
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+# production:
+#   adapter: sqlite3
+#   database: db/production.sqlite3
+#   pool: 5
+#   timeout: 5000
