--- a/config/database.yml
+++ b/config/database.yml
@@ -31,11 +31,11 @@ test:
   pool: 5
   username: root
   password: "123"
-  server: 127.0.0.3
+  server: 127.0.0.1
   port: 3306
 
-# production:
-#   adapter: sqlite3
-#   database: db/production.sqlite3
-#   pool: 5
-#   timeout: 5000
+production:
+  adapter: sqlite3
+  database: db/production.sqlite3
+  pool: 5
+  timeout: 5000
